# django-drf-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh  pre_gen_project.sh
{{cookiecutter.project_slug}}/: .editorconfig  README.md  docker-compose.dev.yaml  pyproject.toml
{{cookiecutter.project_slug}}/src/: .flake8  Dockerfile  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.django_settings_package}}/: settings.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.django_settings_package}}/settings/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.django_settings_package}}/settings/components/: __init__.py  common.py  docs.py  drf.py  installed_apps.py  logging.py  middlewares.py  templates.py
