[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4"
djangorestframework = "^3.12"
django-environ = "^0.8"
django-split-settings = "^1.1"

psycopg2-binary = "^2.9"
drf-yasg = "^1.20.0"
django-auditlog = "^2.0"

{% if cookiecutter.use_sentry == "yes" %}
sentry_sdk = "^1.5"
{% endif %}

[tool.poetry.dev-dependencies]
pytest-django = "^4.5"
factory-boy = "^3.2"
black = "^22.3"
bandit = "^1.7"
isort = "^5.10"
flake8 = "^4.0"
flake8-absolute-import = "^1.0"
flake8-bugbear = "^22.4"
flake8-cognitive-complexity = "^0.1"
flake8-django = "^1.1.2"
flake8-eradicate = "^1.2"
flake8-isort = "^4.1"
flake8-fixme = "^1.1"
flake8-todo = "^0.7"
flake8-mock = "^0.3"
flake8-multiline-containers = "^0.0.19"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^1.3.0"
flake8-pie = "^0.15"
flake8-print = "^4.0"
flake8-printf-formatting = "^1.1.2"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.6"
flake8-quotes = "^3.3"
flake8-simplify = "^0.18"
flake8-use-fstring = "^1.3"
flake8-variables-names = "^0.0.4"
flake8-walrus = "^1.1.0"
mypy = "^0.910"
django-stubs = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
ensure_newline_before_comments = true
include_trailing_comma = true
lines_after_imports=2
extra_standard_library = "nose"
known_django = ["django", "restframework"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = 3.10
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
plugins = ["mypy_django_plugin.main"]


[mypy.plugins.django-stubs]
django_settings_module = "src.{{cookiecutter.django_settings_package}}"
